# polymarket_trading_bot

./: .env.example  .gitignore  Dockerfile  INSIDER_DETECTION_MVP.md  PLAN.md  README.md  deploy-railway.sh  package-lock.json  pyproject.toml  railway.toml  start.sh  supervisord.conf
.claude/: settings.local.json
.claude/agents/: comprehensive-test-generator.md
backend/: .env.example  =0.10.0  Dockerfile  TEST_COVERAGE_REPORT.md  create_user.py  main.py  railway.toml  requirements.txt  seed_data.py  start.sh
backend/app/: config.py  database.py
backend/app/auth/: __init__.py  security.py
backend/app/models/: __init__.py  analytics.py  market.py  order.py  position.py  signal.py  source.py  strategy.py  user.py
backend/app/routes/: __init__.py  analytics.py  auth.py  bot.py  markets.py  positions.py  settings.py  signals.py  sources.py  strategies.py  telegram.py
backend/app/websocket/: __init__.py  events.py  manager.py  router.py
backend/data/: settings.json
backend/tests/: conftest.py  test_analytics_calculator.py  test_auth_routes.py  test_market_harvester.py  test_markets_routes.py  test_polymarket_client.py  test_position_manager_risk.py  test_positions_routes.py  test_qdrant.py  test_risk_manager.py  test_scheduler.py  test_settings.py  test_signals_routes.py  test_strategies_routes.py  test_telegram.py  test_trading_executor.py  test_websocket.py
docs/: missing-features-plan.md
docs/plans/: 2025-01-17-statistics-analytics-design.md  2025-01-17-statistics-analytics-implementation.md  2026-01-17-risk-management.md
frontend/: .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  railway.toml
scripts/: run_api.py  run_bot.py
src/polybot/: __init__.py  config.py  main.py
templates/: base.html  dashboard.html  positions.html  strategies.html
tests/: conftest.py
tests/unit/: test_strategies.py
(+124 files in other folders)
